# ikona

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt.user.2e82ff1  CMakeLists.txt.user.4.9-pre1  ColorSwatch.qml  DarkIcon.qml  GridRect.qml  LICENSE  LightIcon.qml  Messages.sh  PACKAGING.md  README.md  Spacer.qml  basictheme_p.h  cargo-vendor-config.toml  colorscopelight.cpp  colorscopelight.h  icon.cpp  icon.h  iconsetter.cpp  iconsetter.h  iconviewer.desktop  ikona.desktop  index.theme  kirigamipluginfactory.cpp  kirigamipluginfactory.h  main.cpp  main.qml  me.appadeia.ikona.appdata.xml  me.appadeia.ikona.json  meson.build  modifiedkirigamiicon.cpp  modifiedkirigamiicon.h  org.kde.ikona.json  platformtheme.cpp  platformtheme.h  qml.qrc
data/: ikona.desktop  index.theme  me.appadeia.ikona.appdata.xml  me.appadeia.ikona.desktop  meson.build  org.kde.Ikona.appdata.xml  org.kde.Ikona.desktop  org.kde.Ikona.mime.xml
data/templates/: svg-48-color.desktop
include/: icon.h  iconsetter.h  ikonars.h  manager.h  manip.h  monoicon.h  thememodel.h  util.h
qrc/: BreezePalette.qml  ColorSwatch.qml  ColorizedIconLight.qml  DarkIcon.qml  DropDown.qml  GigaView.qml  HIGView.qml  HUD.qml  LightIcon.qml  MonochromaticScreenshot.qml  MonochromeView.qml  RegularView.qml  RowSpacer.qml  Screenshot.qml  SmallGridRect.qml  images.qrc  main.qml  qml.qrc
qrc/img/: img.qrc
qrc/qml/: ColorBlock.qml  ColourPage.qml  ColourPalette.qml  ColourView.qml  DarkIcon.qml  DisplayIcon.qml  ExportDialogColour.qml  IconThemeBrowser.qml  InfoToolTip.qml  LightIcon.qml  MonoView.qml  MonochromaticScreenshot.qml  PlasmaMaterial.qml  Processor.qml  Screenshot.qml  ScreenshotGrid.qml  Welcome.qml  main.qml  qml.qrc  qmldir
src/: icon.cpp  iconmanipulator.cpp  iconmanipulator.h  iconsetter.cpp  iconsetter.h  main.cpp  manager.cpp  manip.cpp  meson.build  monoicon.cpp  thememodel.cpp  util.cpp
src/go/: example.hcl  go.mod  go.sum  main.go
src/go/app/: cli.go  serve.go
src/go/app/conf/: conf.go
src/go/app/filesys/: context.go  fs.go  indexdotthemenode.go  node.go  randname.go  root.go  size.go  variant.go
src/rs/: Cargo.toml
src/rs/src/: lib.rs
src/rs/src/capi/: Cargo.toml  capi.rs
src/rs/src/cli/: Cargo.toml  build.rs  cli.rs  cli.yaml
src/rs/src/ikona/: Cargo.toml  ikona.rs  lib.rs
src/rs/src/ikona/icons/: breeze.rs  gnome.rs  mod.rs  tests.rs
src/rs/src/ikona/icontheme/: mod.rs
src/thumbnail/: ikonathumbnailer.desktop  thumbnail.cpp
templates/: svg-16-monochrome.desktop  svg-22-monochrome.desktop  svg-32-color.desktop  svg-32-monochrome.desktop  svg-64-color.desktop
