[package]
name = "ikona-cli"
version = "0.1.0"
authors = ["Carson Black <uhhadd@gmail.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "ikona-cli"
path = "cli.rs"

[dependencies]
ikona = { path = "../ikona" }

[dependencies.clap]
version = "2.33.0"
features = ["yaml"]

[build-dependencies.clap]
version = "2.33.0"
features = ["yaml"]