[package]
name = "ikona"
version = "0.1.0"
authors = ["Carson Black <uhhadd@gmail.com>"]
edition = "2018"

[lib]
name = "ikona"
path = "lib.rs"

[dependencies]
# This commit was tagged as v2.47.3
librsvg = { git="https://gitlab.gnome.org/GNOME/librsvg", rev="969e9bd82451e79bf40a21b5447bcf788953ba85" }
cairo-rs = "0.8.0"
glib = "0.8.0"
gio = { version="0.7.0", features=["v2_48"] } 
rand = "0.7.3"
regex = "1"
svgcleaner = { version="0.9.5", optional=true }
svgdom = { version="0.10.5", optional=true }
rust-ini = "0.15.2"
lazy_static = "1.4.0"
dirs = "2.0.2"
log = "0.4"

[dev-dependencies]
pretty_env_logger = "0.4.0"

[features]
default = [ "cairo-rs/svg" ]
with-svgcleaner = [ "cairo-rs/svg", "svgcleaner", "svgdom" ]
